# typst-server

./: .tool-versions  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
example/: data.json  template.typ
src/: main.rs
src/templates/: data.json  template.typ
