[package]
name = "typst-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
typst = "0.13.0"
typst-pdf = "0.13.0"
typst-kit = "0.13.0"
derive_typst_intoval = "0.3.0"
typst-as-lib = "0.14.1"
# serde_json = "1.0.140"
# tempfile = "3.17.1"
# tower-http = { version = "0.6.2", features = ["cors", "trace"] }
# comemo = "0.4.0"
# zune-inflate = { version = "0.2.54", default-features = false, features = [
#   "gzip",
#   "std",
# ] }
# tar = "0.4.44"
# ureq = "2.9"
# # ureq = "3.0.8"
# time = "0.3.37"
# ttf-parser = "0.25.1"
