[package]
name = "typst-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
typst = "0.13.0"
typst-pdf = "0.13.0"
typst-kit = "0.13.0"
derive_typst_intoval = "0.3.0"
typst-as-lib = "0.14.1"
tower-http = { version = "0.6.1", features = ["limit", "trace"] }
